--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -81,5 +81,5 @@
 \section{Zainteresowania}
     \cvitem{}{Informatyka, ekonomia, historia, socjologia, filozofia, futurologia, astronomia, biologia molekularna}
 
-\lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej ofercie pracy dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z ustawą z dn. 29.08.97 roku o Ochronie Danych Osobowych Dz. Ust Nr 133 poz. 883).}}
+\lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych dla realizacji procesu rekrutacji, zgodnie z ustawą z dnia 29 sierpnia 1997 roku o ochronie danych osobowych (tekst jedn.: Dz. U. z 2002 r. Nr 101, poz. 926 z późn. zm.).}}
 \end{document}
