dodałem dział o obecnej pracy w Ascen i zdobyte tam doświadczenie

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -14,7 +14,7 @@
 %% Personal data
 \firstname{Jakub}
 \familyname{Sokołowski}
-\title{IT Specialist}
+\title{System Administrator}
 \address{01-684 Warsaw}{Klaudyny 32 m 1}
 \mobile{600~858~250}
 \phone{+48~(22)~833~77~50}
@@ -33,16 +33,22 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
+\cventry{2013--Now}{System Administrator}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as a contractor system administrator of migration environments running AIX Unix hosting IBM DB2 and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank.}
+    \cvitem{}{Responsible for:}
+    \cvlistitem{IBM AIX Unix servers}
+    \cvlistitem{Oracle Data Integrator and IBM DataStage management}
+    \cvlistitem{Analyzing and diagnosing SQL database problems}
+    \cvlistitem{Relaying issues to project group managers}
+    \cvlistitem{Management of file sharing between migration environments and project teams}
+    \cvlistitem{Automation of tasks with scripts (bash, awk, sql)}
 \cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
     \cvitem{}{Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
     \cvlistitem{Automatization of IT processes(storage backups, data conversions)}
     \cvlistitem{Hardware maintenance(servers, routers, workstations)}
-    \cvlistitem{MSSQL and Mysql database management}
-    \cvlistitem{Postfix mail server management}
+    \cvlistitem{Management of services, such as: MSSQL, Mysql, Hyper-V, Postfix, Git}
     \cvlistitem{Maintenance of Microsoft Exchange and Hosted Exchange mail servers}
-    \cvlistitem{Receiving, registering and resolving all IT related issues}
     \cvlistitem{Providing support to all users and clients}
 
     \vspace*{3mm}
@@ -51,9 +57,8 @@
     \vspace*{3mm}
     \cventry{2010}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
     \cvitem{}{Acquired experience:}
-    \cvlistitem{Structure of companies and their inner workings - Construction work}
-    \cvlistitem{Regulation regarding security of personal, governmental and business data}
     \cvlistitem{Creating IT infrastructure in a small office on construction site ``Żerań''}
+    \cvlistitem{Regulation regarding security of personal, governmental and business data}
 
 \section{Engineering thesis}
 \cvitem{Title}{\textbf{Sharing of character devices over networks in GNU/Linux systems}}
@@ -66,12 +71,12 @@
 
 \section{Knowledge}
     \cvitem{Languages}{C, C++, Java, bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
-    \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 and 2008}
+    \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 and 2008, IBM AIX Unix}
     \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, CISCO and DELL switches and routers, APC backup power supplies}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, WLAN, all layers of OSI model}
-    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
+    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
     \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM, Gimp, Photoshop}
-    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
+    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms, Oracle Database Integrator, IBM DataStage}
 
 \section{Courses and certificates}
     \cvitem{2011}{PJWSTK Certificate in Business English, C1 level}
