--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -14,7 +14,7 @@
 %% Personal data
 \firstname{Jakub}
 \familyname{Sokołowski}
-\title{Specjalista IT}
+\title{Administrator Systemów}
 \address{Warszawa 01-684}{Klaudyny 32 m 1}
 \mobile{600~858~250}
 \phone{+48~(22)~833~77~50}
@@ -33,16 +33,22 @@
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Doświadczenie}
+\cventry{2013--Teraz}{Administrator Systemów}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank.}
+    \cvitem{}{Odpowiedzialny za:}
+    \cvlistitem{Serwery IBM AIX Unix}
+    \cvlistitem{Zarządzanie Oracle Data Integrator oraz IBM DataStage}
+    \cvlistitem{Analizowanie i diagnostyka problemów w bazach danych SQL}
+    \cvlistitem{Przekazywanie problemów do menadżerów grup projektowych}
+    \cvlistitem{Zarządzanie wymianą plików pomiędzy środowiskami migracyjnymi i grupami projektowymi}
+    \cvlistitem{Automatyzacja zadań przy pomocy skryptów(bash, awk, sql)}
 \cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie nowego oprogramowania.}
     \cvitem{}{Odpowiedzialny za:}
     \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
     \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
-    \cvlistitem{Automatyzację wszelkich procesów informatycznych( kopie bezpieczeństwa, konwersje danych)}
+    \cvlistitem{Automatyzację wszelkich procesów informatycznych(kopie bezpieczeństwa, konwersje danych)}
     \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
-    \cvlistitem{Zarządzenie bazami danych MSSQL oraz Mysql}
-    \cvlistitem{Zarządzenie serwerem poczty Postfix}
+    \cvlistitem{Zarządzenie usługami takimi jak: MSSQL, Mysql, Hyper-V, Postfix, Git}
     \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Hosted Exchange}
-    \cvlistitem{Odbieranie, rejestrowanie i rozwiązywanie problemów z infrastrukturą IT}
     \cvlistitem{Wsparcie techniczne użytkowników oraz klientów}
 
     \vspace*{3mm}
@@ -51,9 +57,8 @@
     \vspace*{3mm}
     \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
     \cvitem{}{Zdobyte doświadczenie:}
-    \cvlistitem{Struktura firmy i jej działanie - Roboty budowano-montażowe}
-    \cvlistitem{Przepisy o ochronie danych osobowych oraz tajemnic państwowych oraz służbowych}
     \cvlistitem{Tworzenia infrastruktury IT małego biura na budowie ``Żerań''}
+    \cvlistitem{Przepisy o ochronie danych osobowych oraz tajemnic państwowych oraz służbowych}
 
 \section{Praca Inżynierska}
 \cvitem{Tytuł}{\textbf{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}}
@@ -66,12 +71,12 @@
 
 \section{Umiejętności}
     \cvitem{Języki}{C, C++, Java, bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
-    \cvitem{Systemy}{GNU/Linux(wszystkie odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008}
+    \cvitem{Systemy}{GNU/Linux(wszystkie odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008, IBM AIX Unix}
     \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery CISCO i DELL, Zasilacze awaryjne APC}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, WLAN, wszystkie warstwy modelu OSI}
-    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
+    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
     \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM, Gimp, Photoshop}
-    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
+    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage}
 
 \section{Kursy i certyfikaty}
     \cvitem{2011}{PJWSTK Certificate in Business English, poziom C1}
