extended raiffeisen description and removed bit about supporting users to fit everything on one page

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -33,7 +33,7 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2013--Now}{System Administrator}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as a contractor system administrator of migration environments running AIX Unix hosting IBM DB2 and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank.}
+\cventry{2013--Now}{System Administrator}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups.}
     \cvitem{}{Responsible for:}
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
@@ -49,7 +49,6 @@
     \cvlistitem{Hardware maintenance(servers, routers, workstations)}
     \cvlistitem{Management of services, such as: MSSQL, Mysql, Hyper-V, Postfix, Git}
     \cvlistitem{Maintenance of Microsoft Exchange and Hosted Exchange mail servers}
-    \cvlistitem{Providing support to all users and clients}
 
     \vspace*{3mm}
     \cventry{2012}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Windows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
