extended responsibilities for ascen

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -38,7 +38,7 @@
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
     \cvlistitem{Analyzing and diagnosing SQL database problems}
-    \cvlistitem{Relaying issues to project group managers}
+    \cvlistitem{Relaying issues to bank system administrators and project group managers}
     \cvlistitem{Management of file sharing between migration environments and project teams}
     \cvlistitem{Automation of tasks with scripts (bash, awk, sql)}
 \cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
