--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -35,19 +35,18 @@
 \section{Doświadczenie}
 \cventry{2013--Teraz}{Administrator Systemów}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank.}
     \cvitem{}{Odpowiedzialny za:}
-    \cvlistitem{Serwery IBM AIX Unix}
-    \cvlistitem{Zarządzanie Oracle Data Integrator oraz IBM DataStage}
+    \cvlistitem{Serwery IBM AIX Unix oraz narzędzia Oracle Data Integrator oraz IBM DataStage}
     \cvlistitem{Analizowanie i diagnostyka problemów w bazach danych SQL}
-    \cvlistitem{Przekazywanie problemów do menadżerów grup projektowych}
+    \cvlistitem{Rozwiązywanie problemów razem z administratorami systemów bankowych oraz menadżerami grup projektowych}
     \cvlistitem{Zarządzanie wymianą plików pomiędzy środowiskami migracyjnymi i grupami projektowymi}
-    \cvlistitem{Automatyzacja zadań przy pomocy skryptów(bash, awk, sql)}
+    \cvlistitem{Automatyzacja zadań przy pomocy skryptów(bash, AWK, SQL)}
 \cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie nowego oprogramowania.}
     \cvitem{}{Odpowiedzialny za:}
     \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
     \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
     \cvlistitem{Automatyzację wszelkich procesów informatycznych(kopie bezpieczeństwa, konwersje danych)}
     \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
-    \cvlistitem{Zarządzenie usługami takimi jak: MSSQL, Mysql, Hyper-V, Postfix, Git}
+    \cvlistitem{Zarządzenie usługami takimi jak: MS SQL, MySQL, Hyper-V, Postfix, Git}
     \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Hosted Exchange}
     \cvlistitem{Wsparcie techniczne użytkowników oraz klientów}
 
@@ -72,15 +71,15 @@
 \section{Umiejętności}
     \cvitem{Języki}{C, C++, Java, bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systemy}{GNU/Linux(wszystkie odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008, IBM AIX Unix}
-    \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery CISCO i DELL, Zasilacze awaryjne APC}
+    \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery Cisco i DELL, Zasilacze awaryjne APC}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, WLAN, wszystkie warstwy modelu OSI}
-    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
+    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
     \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage}
 
 \section{Kursy i certyfikaty}
     \cvitem{2011}{PJWSTK Certificate in Business English, poziom C1}
-    \cvitem{2009}{Ukończony kurs CISCO CCNA}
+    \cvitem{2009}{Ukończony kurs Cisco CCNA}
     \cvitem{2009}{Ukończony kurs pierwszego stopnia Linux Professional Institute}
 
 \section{Zainteresowania}
