--- a/cv_en.tex
+++ b/cv_en.tex
@@ -38,16 +38,16 @@
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
     \cvlistitem{Analyzing and diagnosing SQL database problems}
-    \cvlistitem{Relaying issues to bank system administrators and project group managers}
+    \cvlistitem{Resolving issues together with bank system administrators and project group managers}
     \cvlistitem{Management of file sharing between migration environments and project teams}
-    \cvlistitem{Automation of tasks with scripts (bash, awk, sql)}
+    \cvlistitem{Automation of tasks with scripts (bash, AWK, SQL)}
 \cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
     \cvitem{}{Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
     \cvlistitem{Automatization of IT processes(storage backups, data conversions)}
     \cvlistitem{Hardware maintenance(servers, routers, workstations)}
-    \cvlistitem{Management of services, such as: MSSQL, Mysql, Hyper-V, Postfix, Git}
+    \cvlistitem{Management of services, such as: MS SQL, MySQL, Hyper-V, Postfix, Git}
     \cvlistitem{Maintenance of Microsoft Exchange and Hosted Exchange mail servers}
 
     \vspace*{3mm}
@@ -71,15 +71,15 @@
 \section{Knowledge}
     \cvitem{Languages}{C, C++, Java, bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 and 2008, IBM AIX Unix}
-    \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, CISCO and DELL switches and routers, APC backup power supplies}
+    \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, Cisco and DELL switches and routers, APC backup power supplies}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, WLAN, all layers of OSI model}
-    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
+    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MS SQL, MySQL, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
     \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM, Gimp, Photoshop}
-    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms, Oracle Database Integrator, IBM DataStage}
+    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of European online banking platforms, Oracle Database Integrator, IBM DataStage}
 
 \section{Courses and certificates}
     \cvitem{2011}{PJWSTK Certificate in Business English, C1 level}
-    \cvitem{2009}{Completed CISCO CCNA course}
+    \cvitem{2009}{Completed Cisco CCNA course}
     \cvitem{2009}{Completed first level of Linux Professional Institute course}
     
 \section{Interests}
