bash should be written capitalized

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -40,7 +40,7 @@
     \cvlistitem{Analyzing and diagnosing SQL database problems}
     \cvlistitem{Resolving issues together with bank system administrators and project group managers}
     \cvlistitem{Management of file sharing between migration environments and project teams}
-    \cvlistitem{Automation of tasks with scripts (bash, AWK, SQL)}
+    \cvlistitem{Automation of tasks with scripts (Bash, AWK, SQL)}
 \cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
     \cvitem{}{Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
@@ -69,7 +69,7 @@
     \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
-    \cvitem{Languages}{C, C++, Java, bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
+    \cvitem{Languages}{C, C++, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 and 2008, IBM AIX Unix}
     \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, Cisco and DELL switches and routers, APC backup power supplies}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, WLAN, all layers of OSI model}
