--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -39,7 +39,7 @@
     \cvlistitem{Analizowanie i diagnostyka problemów w bazach danych SQL}
     \cvlistitem{Rozwiązywanie problemów razem z administratorami systemów bankowych oraz menadżerami grup projektowych}
     \cvlistitem{Zarządzanie wymianą plików pomiędzy środowiskami migracyjnymi i grupami projektowymi}
-    \cvlistitem{Automatyzacja zadań przy pomocy skryptów(bash, AWK, SQL)}
+    \cvlistitem{Automatyzacja zadań przy pomocy skryptów(Bash, AWK, SQL)}
 \cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie nowego oprogramowania.}
     \cvitem{}{Odpowiedzialny za:}
     \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
@@ -69,7 +69,7 @@
     \cvitemwithcomment{Niemiecki}{Podstawy}{Podstawowa znajomość nabyta w liceum.}
 
 \section{Umiejętności}
-    \cvitem{Języki}{C, C++, Java, bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
+    \cvitem{Języki}{C, C++, Java, Bash, AWK, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systemy}{GNU/Linux(wszystkie odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008, IBM AIX Unix}
     \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery Cisco i DELL, Zasilacze awaryjne APC}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, WLAN, wszystkie warstwy modelu OSI}
