usunąłem kawałek o obłudze klientów i rozszerzyłem opis o pracy w Ascen

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -33,7 +33,7 @@
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Doświadczenie}
-\cventry{2013--Teraz}{Administrator Systemów}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank.}
+\cventry{2013--Teraz}{Administrator Systemów}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi.}
     \cvitem{}{Odpowiedzialny za:}
     \cvlistitem{Serwery IBM AIX Unix oraz narzędzia Oracle Data Integrator oraz IBM DataStage}
     \cvlistitem{Analizowanie i diagnostyka problemów w bazach danych SQL}
@@ -48,7 +48,6 @@
     \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
     \cvlistitem{Zarządzenie usługami takimi jak: MS SQL, MySQL, Hyper-V, Postfix, Git}
     \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Hosted Exchange}
-    \cvlistitem{Wsparcie techniczne użytkowników oraz klientów}
 
     \vspace*{3mm}
     \cventry{2012}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w małym biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
