added graphics of companies to experience

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -10,6 +10,9 @@
 \usepackage[utf8]{inputenc}
 %% Adjust the page margins
 \usepackage[scale=0.84]{geometry}
+%% For company logos
+\usepackage{graphicx}
+\graphicspath{{./images/}}
 
 %% Personal data
 \firstname{Jakub}
@@ -33,15 +36,15 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2013--Now}{System Administrator}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups.}
+\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups.}
     \cvitem{}{Responsible for:}
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
     \cvlistitem{Analyzing and diagnosing SQL database problems}
-    \cvlistitem{Resolving issues together with bank system administrators and project group managers}
+    \cvlistitem{Identifying and relying defects together with bank system admins and project group managers}
     \cvlistitem{Management of file sharing between migration environments and project teams}
     \cvlistitem{Automation of tasks with scripts (Bash, AWK, SQL)}
-\cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
+\cventry{2011--2013\\\includegraphics[width=\hintscolumnwidth]{trinity}}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
     \cvitem{}{Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
@@ -51,10 +54,10 @@
     \cvlistitem{Maintenance of Microsoft Exchange and Hosted Exchange mail servers}
 
     \vspace*{3mm}
-    \cventry{2012}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Windows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
+    \cventry{2012\\\includegraphics[width=\hintscolumnwidth]{empirius}}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Windows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
 
     \vspace*{3mm}
-    \cventry{2010}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
+    \cventry{2010\\\includegraphics[width=\hintscolumnwidth]{izomar}}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
     \cvitem{}{Acquired experience:}
     \cvlistitem{Creating IT infrastructure in a small office on construction site ``Żerań''}
     \cvlistitem{Regulation regarding security of personal, governmental and business data}
