went backt o two points instead of one

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -38,7 +38,8 @@
 \section{Doświadczenie}
 \cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{Administrator Systemów}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi.}
     \cvitem{}{Odpowiedzialny za:}
-    \cvlistitem{Serwery IBM AIX Unix oraz narzędzia Oracle Data Integrator oraz IBM DataStage}
+    \cvlistitem{Serwery IBM AIX Unix}
+    \cvlistitem{Zarządzanie Oracle Data Integrator oraz IBM DataStage}
     \cvlistitem{Analizowanie i diagnostyka problemów w bazach danych SQL}
     \cvlistitem{Identyfikacja i przekazywanie defektów do adminów systemów bankowych i grup projektowych}
     \cvlistitem{Zarządzanie wymianą plików pomiędzy środowiskami migracyjnymi i grupami projektowymi}
