removed raiffeisen image since it breaks the balance of blue,black and white

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -36,7 +36,7 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{System Administrator}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups.}
+\cventry{2013--Now\\\includegraphics[width=\hintscolumnwidth]{ascen}}{System Administrator}{Ascen Sp. z o.o}{Warszawa}{Full time}{Working as a contractor system administrator for AIX Unix data migration environments running IBM DB2 as well as IBM and Oracle migration tools used in merging of databases from Polbank with Raiffeisen Bank. Executing the main branch of the migration process and communicating with migration coordinators and project groups.}
     \cvitem{}{Responsible for:}
     \cvlistitem{IBM AIX Unix servers}
     \cvlistitem{Oracle Data Integrator and IBM DataStage management}
