--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -36,7 +36,7 @@
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Doświadczenie}
-\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}\\\includegraphics[width=\hintscolumnwidth]{raiffeisen}}{Administrator Systemów}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi.}
+\cventry{2013--Teraz\\\includegraphics[width=\hintscolumnwidth]{ascen}}{Administrator Systemów}{Ascen Sp. z o.o}{Warszawa}{Pełen etat}{Administrowanie środowiskami migracyjnymi opartymi na systemach AIX Unix udostępniającymi usługi IBM DB2 oraz narzędzia migracyjne IBM oraz Oracle na potrzeby przeniesienia danych z systemów bazodanowych Polbank do RaiffeisenPolbank. Wykonywanie głównego procesu migracji oraz komunikacja z koordynatorami oraz grupami projektowymi.}
     \cvitem{}{Odpowiedzialny za:}
     \cvlistitem{Serwery IBM AIX Unix}
     \cvlistitem{Zarządzanie Oracle Data Integrator oraz IBM DataStage}
