Apache should be written capitalized

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -76,7 +76,7 @@
     \cvitem{Systemy}{GNU/Linux(wszystkie odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008, IBM AIX Unix}
     \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery Cisco i DELL, Zasilacze awaryjne APC}
     \cvitem{Sieć}{Routing statyczny oraz dynamiczny RIP i OSPF, DHCP, DNS, NAT, QoS, WLAN, wszystkie warstwy modelu OSI}
-    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
+    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, DB2, MSSQL, MySQL, Postgresql, IIS, Apache, nginx, lighttpd, Samba, NFS, rsync, Symantec Backup Exec, Cacti, Graylog2, iptables, iproute2, bind, postfix}
     \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej, Oracle Database Integrator, IBM DateStage}
 
@@ -88,5 +88,5 @@
 \section{Zainteresowania}
     \cvitem{}{Informatyka, ekonomia, historia, socjologia, filozofia, futurologia, astronomia, biologia molekularna}
 
-\lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych dla realizacji procesu rekrutacji, zgodnie z ustawą z dnia 29 sierpnia 1997 roku o ochronie danych osobowych (tekst jedn.: Dz. U. z 2002 r. Nr 101, poz. 926 z późn. zm.).}}
+\lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej aplikacji dla potrzeb niezbędnych do realizacji procesów rekrutacji (zgodnie z Ustawą z dnia 29 sierpnia 1997 r. o ochronie danych osobowych tj. Dz. U. z 2002 r., Nr 101, poz. 926, ze zm.).}}
 \end{document}
